fixed add friend alignment issue

--- a/index.css
+++ b/index.css
@@ -78,6 +78,14 @@ body {
 
 .recipe_card_title { font-size: 10px; text-transform: uppercase; font-weight: bold;  margin: 5px; }
 
+.news_layout { float: left; width: 25%; display: inline-block; }
+
+.white_font { font-size: smaller; color: white; }
+
+.red_box { background-color: #ea474c; border-radius: 5px; }
+
+.recipe_col { float: left; width: 25%; }
+
 .send_btn { margin: 40px 0 0 300px; }
 
 .p_title { font-size: 10px; font-weight: bold; }
@@ -101,21 +109,6 @@ body {
   border-radius: 5px;
   height: 40px;
   border: 1px solid white
-}
-
-.white_font {
-  font-size: smaller;
-  color: white;
-}
-
-.red_box {
-  background-color: #ea474c;
-  border-radius: 5px;
-}
-
-.recipe_col {
-  float: left;
-  width: 25%;
 }
 
 /*Checkbox begin*/
